# modelfuel

./: .env.example  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
src/distillstack/: __init__.py  cli.py  config.py
src/distillstack/api/: __init__.py  app.py
src/distillstack/models/: __init__.py  document.py
src/distillstack/pipeline/: __init__.py  processor.py  quality.py  synthesis.py
